[package]
name = "maskulator_redux"
version = "0.1.0"
authors = ["James Millard <millard.jn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ndarray = "0.13"
num-complex = "0.2"
ndarray =  { version = "0.13", features = ["rayon"]}
image = "0.23"
structopt = "0.3.15"
rustfft = "3"